votos y score en video (hecho con Jose)
