# src/main/java/com/unicast/unicast_backend/persistance/model/Video.java
@@ -15,17 +15,19 @@ import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Table;
 
+import org.hibernate.annotations.Formula;
+
 import lombok.Data;
 
 @Data
 @Entity
 @Table(name = "video")
 public class Video {
-    
+
     // TODO: meter quien ha subido el video
 
-	@Id
-	@GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
     private String title;
@@ -33,11 +35,11 @@ public class Video {
     private String description;
 
     private Timestamp timestamp;
-    
+
     private URI url;
 
-	private URI thumbnailUrl;
-    
+    private URI thumbnailUrl;
+
     @ManyToOne
     @JoinColumn(name = "fk_subject")
     private Subject subject;
@@ -51,11 +53,12 @@ public class Video {
 
     @OneToMany(mappedBy = "video")
     private Collection<Vote> votes;
-    
+
     @ManyToMany
-	@JoinTable(
-		name = "video_video_tag", 
-		joinColumns = @JoinColumn(name = "fk_video"), 
-		inverseJoinColumns = @JoinColumn(name = "fk_video_tag"))
-	private Collection<VideoTag> tags; 
+    @JoinTable(name = "video_video_tag", joinColumns = @JoinColumn(name = "fk_video"), inverseJoinColumns = @JoinColumn(name = "fk_video_tag"))
+    private Collection<VideoTag> tags;
+
+    @Formula("(select avg((v.quality + v.clarity + v.suitability) / 3.0) from video vid join app_user_video_vote v on vid.id = v.fk_video)")
+    private Float score;
+
 }
